// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ListingActions RowActions should render Bucket directory 1`] = `
<div
  className="makeStyles-root-1"
>
  <div
    className="makeStyles-wrapper-5"
  >
    <div
      className="makeStyles-container-3"
    >
      <button
        className="MuiButtonBase-root MuiIconButton-root makeStyles-root-7 makeStyles-item-4"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        title="Bookmark"
        type="button"
      >
        <span
          className="MuiIconButton-label"
        >
          <span
            aria-hidden={true}
            className="material-icons MuiIcon-root"
          >
            turned_in_not
          </span>
        </span>
      </button>
      <form
        action="/zip/dir/bucketA/dirB/"
        className="makeStyles-item-4"
        method="POST"
        style={
          {
            "flexShrink": 0,
          }
        }
      >
        <input
          name="token"
          type="hidden"
          value="ABC"
        />
        <button
          className="MuiButtonBase-root MuiIconButton-root makeStyles-root-7"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          title="Download"
          type="submit"
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              aria-hidden={true}
              className="material-icons MuiIcon-root"
            >
              arrow_downward
            </span>
          </span>
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`components/ListingActions RowActions should render Bucket file 1`] = `
<div
  className="makeStyles-root-1"
>
  <div
    className="makeStyles-wrapper-5"
  >
    <div
      className="makeStyles-container-3"
    >
      <button
        className="MuiButtonBase-root MuiIconButton-root makeStyles-root-7 makeStyles-item-4"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        title="Bookmark"
        type="button"
      >
        <span
          className="MuiIconButton-label"
        >
          <span
            aria-hidden={true}
            className="material-icons MuiIcon-root"
          >
            turned_in_not
          </span>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
      <a
        aria-disabled={false}
        className="MuiButtonBase-root MuiIconButton-root makeStyles-root-7 makeStyles-item-4"
        download={true}
        href="s3://bucketA/fileB"
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        title="Download"
      >
        <span
          className="MuiIconButton-label"
        >
          <span
            aria-hidden={true}
            className="material-icons MuiIcon-root"
          >
            arrow_downward
          </span>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`components/ListingActions RowActions should render Bucket file without download button 1`] = `
<div
  className="makeStyles-root-1"
>
  <div
    className="makeStyles-wrapper-5"
  >
    <div
      className="makeStyles-container-3"
    >
      <button
        className="MuiButtonBase-root MuiIconButton-root makeStyles-root-7 makeStyles-item-4"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        title="Bookmark"
        type="button"
      >
        <span
          className="MuiIconButton-label"
        >
          <span
            aria-hidden={true}
            className="material-icons MuiIcon-root"
          >
            turned_in_not
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`components/ListingActions RowActions should render Package directory 1`] = `
<div
  className="makeStyles-root-1"
>
  <div
    className="makeStyles-wrapper-5"
  >
    <div
      className="makeStyles-container-3"
    >
      <form
        action="/zip/package/bucketA/namespaceB/nameC/latest/dirD/"
        className="makeStyles-item-4"
        method="POST"
        style={
          {
            "flexShrink": 0,
          }
        }
      >
        <input
          name="token"
          type="hidden"
          value="ABC"
        />
        <button
          className="MuiButtonBase-root MuiIconButton-root makeStyles-root-7"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          title="Download"
          type="submit"
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              aria-hidden={true}
              className="material-icons MuiIcon-root"
            >
              arrow_downward
            </span>
          </span>
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`components/ListingActions RowActions should render Package directory without download button 1`] = `null`;

exports[`components/ListingActions RowActions should render Package file 1`] = `
<div
  className="makeStyles-root-1"
>
  <div
    className="makeStyles-wrapper-5"
  >
    <div
      className="makeStyles-container-3"
    >
      <a
        aria-disabled={false}
        className="MuiButtonBase-root MuiIconButton-root makeStyles-root-7 makeStyles-item-4"
        download={true}
        href="s3://bucketa/pathB/fileB"
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        title="Download"
      >
        <span
          className="MuiIconButton-label"
        >
          <span
            aria-hidden={true}
            className="material-icons MuiIcon-root"
          >
            arrow_downward
          </span>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`components/ListingActions RowActions should render Package file without download button 1`] = `null`;

exports[`components/ListingActions RowActions should render nothing if archived 1`] = `null`;

exports[`components/ListingActions RowActions should render nothing if no route 1`] = `null`;

exports[`components/ListingActions RowActions should render nothing if wrong route 1`] = `null`;
